# beacon-lang

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/beacon-lang/: AgpuRendering.h  ArrayList.h  Bytecode.h  Context.h  Dictionary.h  Exceptions.h  Math.h  Memory.h  ObjectModel.h  OrderedCollection.h  Parser.h  Scanner.h  SourceCode.h  SyntaxCompiler.h  TokenKind.inc  Window.h
scripts/runtime/: Array.st  ArrayList.st  ByteArray.st  Character.st  ClassBrowser.st  Color.st  CompiledCode.st  Exceptions.st  FormRendering.st  Geometry.st  Inspector.st  LinearAlgebra.st  Morphic.st  MorphicCode.st  MorphicCube.st  MorphicEvents.st  MorphicLayout.st  MorphicText.st  MorphicWindow.st  Number.st  Object.st  Runtime.st  SequenceableCollection.st  Stream.st  String.st  Window.st  WindowEvents.st  Workspace.st
scripts/runtime/shaders/: ClearRenderChunkData.glsl  CullOpaqueObjects.glsl  DaySkyShader.glsl  DepthOnlyVertex.glsl  FilmicTonemapping.glsl  GuiFragmentShader.glsl  GuiVertexShader.glsl  MakeDrawIndirectCommands.glsl  ShaderCommon.glsl
src/: CMakeLists.txt
src/beacon-vm/: AgpuRendering.c  ArrayList.c  ArrayPrimitives.c  Bytecode.c  CMakeLists.txt  Context.c  Dictionary.c  Exceptions.c  Font.c  FormRendering.c  LinearAlgebra.c  Main.c  Math.c  Memory.c  NullWindow.c  OrderedCollection.c  Parser.c  SDL2Window.c  Scanner.c  SourceCode.c  SyntaxCompiler.c  UnityBuild.c  XcbWindow.c
src/runtime/: AbstractBinaryFileStream.st  ArrayList.st  Behavior.st  Class.st  ClassBrowser.st  Color.st  Font.st  Form.st  FormRendering.st  Geometry.st  Inspector.st  LinearAlgebra.st  Morphic.st  MorphicCode.st  MorphicEvents.st  MorphicLayout.st  MorphicTable.st  MorphicText.st  MorphicWindow.st  Number.st  Object.st  Printing.st  ProtoObject.st  Runtime.st  SequenceableCollection.st  Slot.st  SourceCode.st  Stream.st  String.st  Window.st  WindowEvents.st
